added more tests and more production code along with some make tasks that let me run tests on my mac

--- a/js/Makefile
+++ b/js/Makefile
@@ -1,4 +1,9 @@
-all: test_js
+linux-start:
+	java -jar JsTestDriver-1.2.2.jar --port 9876 --browser `which google-chrome`
 
-test_js:
-	java -jar JsTestDriver-1.2.2.jar --port 4224 --browser `which firefox`,`which google-chrome` --tests all
+mac-start:
+	java -jar JsTestDriver-1.2.2.jar --port 9876 &
+
+mac-all-tests:
+	/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome http://localhost:9876/slave/1/RemoteConsoleRunnerquirks.html & 
+	java -jar JsTestDriver-1.2.2.jar --tests all
