added some more tests and stuff

--- a/js/Makefile
+++ b/js/Makefile
@@ -1,6 +1,6 @@
 
 osx:
-	java -jar JsTestDriver-1.3.2.jar --port 9876 --browser /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome,/Applications/Firefox.app/Contents/MacOS/firefox --tests all
+	java -jar JsTestDriver-1.3.2.jar --port 9876 --browser /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --tests all
 
 linux:
 	java -jar JsTestDriver-1.3.2.jar --port 9876 --browser `which chromium-browser`,`which firefox` --tests all
